# InsPyredGallery

./: pyproject.toml
configs/: hubconf.py
src/: app.py
